<resources>
    <string name="app_name">ProjetoIntegrador</string>
    <string name="movie_genre">Accion</string>
    <string name="movie_search">Search for movie...</string>
    <string name="movie_title">Movie Title</string>
    <string name="all_movies">All Movies</string>
    <string name="favorite_movies">Favorite</string>
    <string name="search_button">Search Button</string>
    <string name="heart_icon_description">heart icon</string>
    <string name="movie_rating">81%</string>
    <string name="overview">Overview</string>
    <string name="user_score">User Score</string>
    <string name="movie_duration">2h 45min</string>
    <string name="movie_overview">Evan McCauley has skills he never learned and memories of places he has never visited. Self-medicated and on the brink of a mental breakdown, a secret group that call themselves “Infinites” come to his rescue, revealing that his memories are real.</string>
    <string name="movie_cast">Cast</string>
    <string name="movie_release">2019</string>
    <string name="age_restriction">PG-13</string>
    <string name="try_again">Try again</string>
    <string name="failed">The System has failed</string>
    <string name="try_again_msg">For some reason, it was not possible to process your solicitation. Please, try again.</string>
    <string name="search_mode">Search Mode</string>
    <string name="back_to_main_button">Back to Main</string>
    <string name="floating_btn_description">return to previous page button</string>
    <string name="movie_not_found">This movie does not exist</string>
    <string name="movie_not_found_message">We could not find the movie you were looking for. Please redo your search.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>