<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    tools:context=".ui.MainActivity">

    <ImageButton
        android:id="@+id/submitSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginVertical="49dp"
        android:background="@color/backgroundColor"
        android:contentDescription="@string/search_button"
        android:src="@drawable/icon_search"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/searchMovie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="49dp"
        android:autofillHints="no"
        android:ems="16"
        android:hint="@string/movie_search"
        android:inputType="text"
        android:textSize="@dimen/small"
        app:layout_constraintStart_toEndOf="@+id/submitSearch"
        app:layout_constraintTop_toTopOf="parent" />


    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@color/backgroundColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/submitSearch"
        app:tabTextColor="@color/clickedButtonColor">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tabSearchMode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_mode" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="" />

    </com.google.android.material.tabs.TabLayout>


    <TextView
        android:id="@+id/txtBackToMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:textSize="@dimen/small"
        android:layout_marginTop="8dp"
        android:text="@string/back_to_main_button"
        android:textColor="@color/greenPrimaryColor"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tabLayout" />

    <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvGenre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tabLayout"
                tools:listitem="@layout/item_genre" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvMovie"
                android:visibility="invisible"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/rvGenre"
                app:layout_constraintBottom_toBottomOf="parent"
                tools:listitem="@layout/movie_list_item" />


<!--    <androidx.viewpager.widget.ViewPager-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/tabLayout" />-->

</androidx.constraintlayout.widget.ConstraintLayout>